# KeyValueStore

python/: README.md  pyproject.toml
python/api/: main.py
rust/: Cargo.toml  README.md
rust/src/: 404.html  adjfks.rs  main.rs  store.rs  test.rs
