[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sanja Petrović <petrovic.e24.2023@uns.ac.rs>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
dev = "api.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
